BUG FIX: reordering content - text is overlapping and out of bounds of the box

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -954,7 +954,7 @@ form.locationForm {
 
 		.type {
 			float:left;
-			width: 80px;
+			width: 110px;
 		}
 
 		.preview {
